# cpp-flappy-bird

./: CMakeLists.txt  README.md  main.cpp
include/: constants.h  game.h
include/components/: entity.h
src/: game.cpp
